--- a/stylesheet.css
+++ b/stylesheet.css
@@ -751,7 +751,6 @@ input {
     border-bottom-style: solid;
     border-bottom-width: 1px;
     font-size: 30px;
-    /* font-family: 'Lato', sans-serif;*/
 }
 .products-header-arrows {
     display: flex;
@@ -850,7 +849,7 @@ input {
     padding: 0 15px;
 }
 i {
-    font-family: 'Font Awesome 5 Free', 'Font Awesome 5 Brands';
+    font-family: 'Font Awesome 5 Free', 'Font Awesome 5 Brands', sans-serif;
     font-weight: 900;
     /*color: white;*/
     font-style: normal;
@@ -1009,8 +1008,7 @@ i {
 
 .who_we_are_text{
     width: 1120px;
-    margin: 28px;
-    margin-bottom: 0px;
+    margin: 28px 28px 0;
     font-size: 16px;
     line-height: 26px;
     font-weight: 400;
@@ -1088,8 +1086,7 @@ i {
 .register_option{
     display: flex;
     flex-direction: row;
-    margin: 15px;
-    margin-bottom: 30px;
+    margin: 15px 15px 30px;
     justify-content: space-around;
 }
 
@@ -1104,7 +1101,7 @@ i {
     color: #ffffff;
     background-color: #05aecc;
     cursor: pointer;
-    
+
 }
 
 .register_button:hover {
@@ -1124,76 +1121,106 @@ i {
 }
 
 .modal {
+    display: flex;
+    flex-direction: column;
     position: relative;
     background: #ffffff;
     border-style: solid;
     border-color: #ef5966;
     border-width: 1px;
-    width: 300px;
-    height: 360px;
+    width: 700px;
+    height: 700px;
     z-index: 30;
     top: 50%;
     transform: translate( 0%, -50%);
 }
-
-.headerstext {
-    display: flex;
-    align-self: flex-end;
-    color: #05aecc;
-    font-size: 30px;
-    font-family: 'Lato', sans-serif;
-}
-
 .headeregister{
     display: flex;
     position: relative;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    border-width: 0px;
-    border-bottom: 1px;
-    border-color: #ef5966;
-    border-style: solid;
-    padding: 15px;
+    height: 90px;
+}
+.headerstext {
+    display: flex;
+    align-self: flex-end;
+    color: #05aecc;
+    padding: 0 20px 10px 0;
+    margin-left: 30px;
+    border-bottom: #f0626e;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    font-size: 30px;
 }
 
+.register_line {
+    position: absolute;
+    bottom: 0;
+    z-index: -1;
+    border-style: solid;
+    border-color: #b9b9b9;
+    border-width: 1px 0 0 0;
+    width: 100%;
+}
+
+
+
 .exit {
+    margin-top: auto;
+    margin-bottom: 10px;
+    margin-right: 30px;
     display: flex;
-    width: 30px;
-    height: 30px;
-    font-size: 25px;
+    width: 45px;
+    height: 45px;
+    font-size: 30px;
     justify-content: center;
     align-items: center;
     border: none;
-    color: #ffffff;
-    background-color: #ef5966;
+    color: #05aecc;
+    background-color: transparent;
     cursor: pointer;
 }
 
 .exit:hover {
-    background-color: #ffffff;
+    cursor: pointer;
     color: #ef5966;
-    border: 1px solid #ef5966;
+    /*background-color: #ef5966;
+    color: #ef5966;
+    border: 1px solid #ef5966;*/
+}
+
+.form_input {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: space-between;
+    justify-items: center;
+    height: 100%;
+}
+
+.user_input {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
 }
 
 .textregister {
-    font-size: 20px;
-    margin-bottom: 5px;
-    margin-left: 15px;
+    font-size: 25px;
     font-weight: 400;
     color: #ef5966;
 }
 
 .inputregister {
-    margin-left: 15px;
-    border-color: #ef5966;
-    width: 270px;
+    border: 1px solid #dedede;
+    width: 100%;
+    height: 60px;
+    font-size: 20px;
 }
 
 .send {
     display: flex;
-    width: 100px;
-    height: 40px;
+    width: 60%;
+    height: 60px;
     font-size: 25px;
     justify-content: center;
     align-items: center;
@@ -1201,8 +1228,7 @@ i {
     color: #ffffff;
     background-color: #05aecc;
     cursor: pointer;
-    margin: auto;
-    margin-top: 20px;
+    margin-top: 55px;
 }
 
 .send:hover {
