--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1233,8 +1233,8 @@ i {
 
 .send:hover {
     background-color: #ffffff;
-    color: #05aecc;
-    border: 1px solid #05aecc;
+    color: #ef5966;
+    border: 1px solid #ef5966;
 }
 
 .success {
